Lunar Compress/LunarDLL.h


typedef unsigned int (WINAPI *LCPROC1)();
extern LCPROC1 LunarVersion;
typedef BOOL (WINAPI *LCPROC3)(char* FileName, unsigned int FileMode);
extern LCPROC3 LunarOpenFile;
typedef unsigned char* (WINAPI *LCPROC22)(void* data, unsigned int FileMode, unsigned int size);
extern LCPROC22 LunarOpenRAMFile;
typedef unsigned int (WINAPI *LCPROC23)(char* FileName);
extern LCPROC23 LunarSaveRAMFile;
typedef BOOL (WINAPI *LCPROC2)();
extern LCPROC2 LunarCloseFile;
typedef unsigned int (WINAPI *LCPROC4)();
extern LCPROC4 LunarGetFileSize;
typedef unsigned int (WINAPI *LCPROC5)(void* Destination, unsigned int Size, unsigned int Address, unsigned int Seek);
extern LCPROC5 LunarReadFile;
typedef unsigned int (WINAPI *LCPROC6)(void* Source, unsigned int Size, unsigned int Address, unsigned int Seek);
extern LCPROC6 LunarWriteFile;
typedef unsigned int (WINAPI *LCPROC26)(unsigned int value);
extern LCPROC26 LunarSetFreeBytes;
typedef unsigned int (WINAPI *LCPROC7)(unsigned int Pointer, unsigned int ROMType, unsigned int Header);
extern LCPROC7 LunarSNEStoPC;
typedef unsigned int (WINAPI *LCPROC8)(unsigned int Pointer, unsigned int ROMType, unsigned int Header);
extern LCPROC8 LunarPCtoSNES;
typedef unsigned int (WINAPI *LCPROC9)(void* Destination,unsigned int AddressToStart,unsigned int MaxDataSize, unsigned int Format, unsigned int Format2, unsigned int* LastROMPosition);
extern LCPROC9 LunarDecompress;
typedef unsigned int (WINAPI *LCPROC10)(void* Source, void* Destination,unsigned int DataSize, unsigned int MaxDataSize, unsigned int Format, unsigned int Format2);
extern LCPROC10 LunarRecompress;
typedef BOOL (WINAPI *LCPROC11)(unsigned int Address,unsigned int Size);
extern LCPROC11 LunarEraseArea;
typedef unsigned int (WINAPI *LCPROC12)(unsigned int Mbits);
extern LCPROC12 LunarExpandROM;
typedef unsigned int (WINAPI *LCPROC13)(unsigned int AddressStart, unsigned int AddressEnd, unsigned int Size,unsigned int BankType);
extern LCPROC13 LunarVerifyFreeSpace;
typedef unsigned int (WINAPI *LCPROC24)(HWND hwnd, char* IPSFileName, char* ROMFileName, char* ROM2FileName, unsigned int Flags);
extern LCPROC24 LunarIPSCreate;
typedef unsigned int (WINAPI *LCPROC25)(HWND hwnd, char* IPSFileName, char* ROMFileName, unsigned int Flags);
extern LCPROC25 LunarIPSApply;
typedef BOOL (WINAPI *LCPROC14)(void* Source, void* Destination, unsigned int NumTiles, unsigned int GFXType);
extern LCPROC14 LunarCreatePixelMap;
typedef BOOL (WINAPI *LCPROC15)(unsigned char* Source, unsigned char* Destination, unsigned int NumTiles, unsigned int GFXType);
extern LCPROC15 LunarCreateBppMap;
typedef unsigned int (WINAPI *LCPROC16)(unsigned int SNESColor);
extern LCPROC16 LunarSNEStoPCRGB;
typedef unsigned int (WINAPI *LCPROC17)(unsigned int PCColor);
extern LCPROC17 LunarPCtoSNESRGB;
typedef BOOL (WINAPI *LCPROC18)(unsigned int* TheMapBits, int TheWidth, int TheHeight, int DisplayAtX, int DisplayAtY, void* PixelMap, unsigned int* PCPalette, unsigned int Map8Tile, unsigned int Extra);
extern LCPROC18 LunarRender8x8;
typedef unsigned int (WINAPI *LCPROC19)(void* TheData, unsigned int Size, unsigned int PreferredAddress, unsigned int MinRange, unsigned int MaxRange, unsigned int Flags);
extern LCPROC19 LunarWriteRatArea;
typedef unsigned int (WINAPI *LCPROC20)(unsigned int Address,unsigned int Size,unsigned int Flags);
extern LCPROC20 LunarEraseRatArea;
typedef unsigned int (WINAPI *LCPROC21)(unsigned int Address, unsigned int Flags);
extern LCPROC21 LunarGetRatAreaSize;